# pipf

./: .gitignore  pyproject.toml  run.sh
pipf/fzf/packages_list/: __main__.py
pipi/: __init__.py  app.py
pipi/fzf/: __init__.py  __main__.py  run.sh
pipi/fzf/packages_list/: __main__.py
pipi/fzf/preview/: __main__.py
