[tool.poetry]
name = "pipi"
version = "0.1.0"
description = "Simple CLI PyPI packages finder inside Fuzzy Finder."
authors = ["samedamci <samedamci@disroot.org>"]
license = "ISC"

[tool.poetry.dependencies]
python = "^3.6.2"
requests = "^2.26.0"
shools = "^0.1.2"

[tool.poetry.dev-dependencies]
black = "^21.7b0"

[tool.poetry.scripts]
pipi = "pipi.fzf:__main__"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
